[project]
name = "pygnuutils"
version = "0.1.1"
description = "A python implementation for GNU utils"
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE" }
keywords = ["gnu", "cli", "coreutils"]
authors = [
    { name = "Matan Perelman", email = "matan1008@gmail.com" }
]
maintainers = [
    { name = "Matan Perelman", email = "matan1008@gmail.com" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
]
dynamic = ["dependencies"]

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
"Homepage" = "https://github.com/matan1008/pygnuutils"
"Bug Reports" = "https://github.com/matan1008/pygnuutils/issues"

[project.scripts]
pygnuutils = "pygnuutils.__main__:main"

[tool.setuptools.packages.find]
exclude = ["tests*"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"